<resources>
    <string name="app_name" translatable="false">RecipeApp</string>
    <string name="categories">categories</string>
    <string name="favorites">favorites</string>
    <string name="category_card_image">category card image</string>
    <string name="categories_background_image">categories background image</string>
    <string name="recipes_background_image">recipes background image</string>
    <string name="recipe_background_image">recipe background image</string>
    <string name="ingredients">ingredients</string>
    <string name="portions">Portions:</string>
    <string name="cooking_method">cooking method</string>
    <string name="add_to_favorites_button">add to favorites button</string>
    <string name="recipe_steps">recipe steps</string>
    <string name="list_of_ingredients">list of ingredients</string>
    <string name="sp_favorites_key" translatable="false">com.renegatemaster.recipeapp.SP_FAVORITES_FILE_KEY</string>
    <string name="sp_favorites_string_set" translatable="false">STRING_SET_KEY</string>
</resources>