<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context=".ui.recipes.recipe.RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:contentDescription="@string/recipe_background_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/btnAddToFavorite"
                android:contentDescription="@string/add_to_favorites_button"
                android:layout_width="@dimen/favoritesIconSize"
                android:layout_height="@dimen/favoritesIconSize"
                android:layout_marginTop="@dimen/basicIndentation"
                android:layout_marginEnd="@dimen/basicIndentation"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/ic_heart_empty" />

            <TextView
                android:id="@+id/tvRecipeTitle"
                style="@style/StyleTitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basicIndentation"
                android:layout_marginBottom="@dimen/basicIndentation"
                android:background="@drawable/shape_rounded_main"
                android:gravity="center"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivRecipe"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/lorem" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/basicIndentation"
            android:layout_marginTop="@dimen/basicIndentation"
            android:layout_marginBottom="@dimen/halfIngredientIndentation"
            android:orientation="vertical">

            <TextView
                style="@style/StyleTitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/halfIngredientIndentation"
                android:background="@drawable/shape_rounded_main"
                android:gravity="center"
                android:text="@string/ingredients" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/StylePortions16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portions" />

                <TextView
                    android:id="@+id/tvPortionsQuantity"
                    style="@style/StylePortions16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/halfIngredientIndentation"
                    tools:text="3" />

            </LinearLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/sbPortionsQuantity"
            style="@style/styleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/basicIndentation"
            android:max="5"
            android:min="1"
            android:progress="3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:contentDescription="@string/list_of_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/basicIndentation"
            android:layout_marginBottom="@dimen/basicIndentation"
            android:background="@drawable/shape_rounded_rv_ingredients"
            android:paddingVertical="@dimen/quarterBasicIndentation"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:itemCount="10"
            tools:listitem="@layout/item_ingredient" />

        <TextView
            style="@style/StyleTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basicIndentation"
            android:layout_marginBottom="@dimen/basicIndentation"
            android:background="@drawable/shape_rounded_main"
            android:gravity="center"
            android:text="@string/cooking_method" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethods"
            android:contentDescription="@string/recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/basicIndentation"
            android:layout_marginBottom="@dimen/halfBasicIndentation"
            android:background="@drawable/shape_rounded_rv_ingredients"
            android:paddingVertical="@dimen/quarterBasicIndentation"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:itemCount="5"
            tools:listitem="@layout/item_method" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>